# PocketRAG

./: .gitignore  pyproject.toml
pocketrag/: __init__.py  cli.py  config.py
pocketrag/data/: __init__.py  chunkers.py  loaders.py  schemas.py
pocketrag/eval/: __init__.py  generation_eval.py  retrieval_eval.py
pocketrag/generation/: __init__.py  base.py  hf_generator.py  rag_pipeline.py
pocketrag/retrieval/: __init__.py  bm25.py  dense.py  embeddings.py
pocketrag/utils/: hardware.py  logging.py
