[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pocketrag"
version = "0.1.0"
description = "A lightweight, reproducible RAG benchmarking toolkit for consumer hardware."
authors = [
  {name = "Harshith Kethavath", email = "hello@harshithkethavath.com"},
  {name = "Srija Yadav Vuppula"}
]

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "psutil",
  "numpy"
]

[project.scripts]
pocketrag = "pocketrag.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pocketrag*"]